<resources>
    <string name="app_name">Versatile Application</string>

    <!--  Bottom nav bar texts  -->
    <string name="title_home">Home</string>
    <string name="title_station">Station</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_motorcycle">Motorcycle</string>
    <string name="title_account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--  Bottom nav bar texts  -->
    <string name="title_age_feature">Age Calculator</string>
    <string name="icon_user_info">Icon_User_Info</string>
    <string name="icon_user_settings">Icon_User_Settings</string>
    <string name="cover_user_bg">cover_user_bg</string>
    <string name="user_informations">User Info</string>
    <string name="user_settings">Settings</string>
    <string name="user_page_cover">user page cover</string>
    <string name="user_icon">user_icon</string>
    <string name="user_setting_icon">user_setting_icon</string>
    <string name="ichange">iCHANGE</string>
    <string name="user_login_out">Login/Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="forget_password"><b><u>Forget password ?</u></b></string>
    <string name="have_no_iChange"><b><u>Do not have iChange account ?</u></b></string>
    <string name="signUp_iChange">Sign up iChange account</string>
    <string name="email_or_phone">Email or phone number</string>

    <!--  Text hint  -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_sign_out">Sign In/Sign Out</string>

    <!--  Text for Sign Up Form  -->
    <string name="user_full_name_signup">Full name</string>
    <string name="phone_no_signup">Phone number</string>
    <string name="user_email_signup">Email</string>
    <string name="moto_brand_signup">Brand</string>
    <string name="moto_serial_number_signup">Serial number</string>
    <string name="moto_series_signup">Series</string>
    <string name="moto_color_signup">Color</string>
    <string name="set_moto_name_signup">Set your motorcycle name</string>
    <string name="text_explain_name_signup">ชื่อนี้จะถูกเรียกแทนยี่ห้อและเลขตัวถังรถเมื่อทำรายการต่าง ๆ (จะตั้งหรือไม่ก็ได้)</string>
    <string name="question_pass_reset_signup">Question when reset password</string>
    <string name="answer_pass_reset_signup">Type your answer</string>
    <string name="set_password_signup">Your password</string>
    <string name="confirm_password_signup">Confirm your password</string>
    <string name="accept_agreement">I accept agreement and allow to access privacy</string>
    <string name="signup_text_button">Sign up</string>

    <!-- Spinner Reset Questions -->
    <string-array name="question_lists">
        <item>Select a question</item>
        <item>Bangkok ?</item>
        <item>London ?</item>
        <item>Paris ?</item>
        <item>Singapore ?</item>
        <item>New York ?</item>
        <item>Istanbul ?</item>
        <item>Dubai ?</item>
        <item>Kuala Lumpur ?</item>
        <item>Hong Kong ?</item>
        <item>Barcelona ?</item>
    </string-array>

    <!--  Text for forget password  -->
    <string name="forget_pass_txt">Forget password</string>
    <string name="question_forget_txt">Question when you want to reset password</string>
    <string name="answer_forget_edt">Type your question here</string>
    <string name="call_center_txt">If you can not remember, please contact call center</string>
    <string name="call_center_tel">Tel. 02–1234567</string>
    <string name="next_Btn">Next</string>
    <string name="phoneTxt">Phone Number</string>
    <string name="setNewPasswordForget">Set New Password</string>
    <string name="confirmNewPasswordForget">Confirm New Password</string>
    <string name="finish_btn_forget">Submit</string>

    <!--  Text for Logged in page  -->
    <string name="btn_logout">Log Out</string>
    <string name="btn_delete_account">Delete Account</string>


    <!--  User info text -->
    <string name="user_info_name">Name: </string>
    <string name="user_info_phone">Phone no.: </string>
    <string name="user_info_email">Email: </string>
    <string name="user_info_edit"><b><u>Edit</u></b></string>


</resources>