<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_bottom_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_station"
        android:icon="@drawable/nav_bottom_station"
        android:title="@string/title_station" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/nav_bottom_wallet"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/navigation_motorcycle"
        android:icon="@drawable/nav_bottom_motorcycle"
        android:title="@string/title_motorcycle" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/nav_bottom_account"
        android:title="@string/title_account" />

</menu>