<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.userinfo.UserInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_cover"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_dark"
        app:cardBackgroundColor="#08BC92"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="110dp"
                    android:layout_height="94dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/minato_namikaze"
                    app:civ_border_width="0dp" />

            <TextView
                    android:id="@+id/signInFragmentText"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/user_informations"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="#2B2A2A"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_row="0" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="633dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/user_cover">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/minato_namikaze"
            app:civ_border_width="0dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#E6E5E5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <TextView
                    android:id="@+id/txtNameUserInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"
                    android:text="@string/user_info_name" />

                <TextView
                    android:id="@+id/txtPhoneNoUserInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/user_info_phone" />

                <TextView
                    android:id="@+id/txtEmailUserInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/user_info_email" />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/user_info_edit"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>
