<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.LoggedInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_dark"
        app:cardBackgroundColor="#D2C1C0C0"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:columnCount="2">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="94dp"
                    android:layout_height="68dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginLeft="50dp"
                    android:contentDescription="loginIcon"
                    android:src="@drawable/login"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/forgetPasswordFragmentText"
                    android:layout_width="318dp"
                    android:layout_height="99dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_login_out"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_row="0" />

            </GridLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="633dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btn_logout"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btn_delete_account"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>