<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SignInFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_dark"
        app:cardBackgroundColor="#D2C1C0C0"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:columnCount="2">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="94dp"
                    android:layout_height="68dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginLeft="50dp"
                    android:src="@drawable/login"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/signInFragmentText"
                    android:layout_width="318dp"
                    android:layout_height="99dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_in_sign_out"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_row="0" />

            </GridLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="633dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="322dp"
            app:cardBackgroundColor="#D2C1C0C0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittxt"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittxt"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
                    android:text="Button" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>